# WEB_HW_13_1

./: README.md  _v.exmpl  main.py  pyproject.toml
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  db.py  users.py
src/schemas/: contacts.py
src/seed/: users.py
src/services/: auth.py  email.py
